[package]
name = "madsim-io-uring"
version = "0.1.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The `io-uring` simulator on madsim."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["asynchronous", "filesystem", "simulation"]
keywords = ["io-uring", "async", "deterministic", "simulator"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(madsim)'.dependencies]
madsim = { version = "0.2.35", path = "../madsim" }
libc = "0.2"

[target.'cfg(not(madsim))'.dependencies]
io-uring = "0.7"

[target.'cfg(madsim)'.dev-dependencies]
madsim = { version = "0.2.35", path = "../madsim" }
libc = "0.2"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "madsim"]
rustdoc-args = ["--cfg", "madsim", "--cfg", "docsrs"]

[lints]
workspace = true
